--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,52 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@article{yang2017generative,
+  title={Generative poisoning attack method against neural networks},
+  author={Yang, Chaofei and Wu, Qing and Li, Hai and Chen, Yiran},
+  journal={arXiv preprint arXiv:1703.01340},
+  year={2017}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{liu2015spiking,
+  title={A spiking neuromorphic design with resistive crossbar},
+  author={Liu, Chenchen and Yan, Bonan and Yang, Chaofei and Song, Linghao and Li, Zheng and Liu, Beiye and Chen, Yiran and Li, Hai and Wu, Qing and Jiang, Hao},
+  booktitle={2015 52nd ACM/EDAC/IEEE Design Automation Conference (DAC)},
+  pages={1--6},
+  year={2015},
+  organization={IEEE}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{yang2016security,
+  title={Security of neuromorphic computing: thwarting learning attacks using memristor's obsolescence effect},
+  author={Yang, Chaofei and Liu, Beiye and Li, Hai and Chen, Yiran and Barnell, Mark and Wu, Qing and Wen, Wujie and Rajendran, Jeyavijayan},
+  booktitle={2016 IEEE/ACM International Conference on Computer-Aided Design (ICCAD)},
+  pages={1--6},
+  year={2016},
+  organization={ACM}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{yang2021defending,
+  title={Defending against gan-based deepfake attacks via transformation-aware adversarial faces},
+  author={Yang, Chaofei and Ding, Leah and Chen, Yiran and Li, Hai},
+  booktitle={2021 International Joint Conference on Neural Networks (IJCNN)},
+  pages={1--8},
+  year={2021},
+  organization={IEEE}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{hassan2017hybrid,
+  title={Hybrid spiking-based multi-layered self-learning neuromorphic system based on memristor crossbar arrays},
+  author={Hassan, Amr M and Yang, Chaofei and Liu, Chenchen and Li, Hai Helen and Chen, Yiran},
+  booktitle={Design, Automation \& Test in Europe Conference \& Exhibition (DATE), 2017},
+  pages={776--781},
+  year={2017},
+  organization={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@phdthesis{yang2020security,
+  title={Security and Robustness in Neuromorphic Computing and Deep Learning},
+  author={Yang, Chaofei},
+  year={2020},
+  school={Duke University}
 }
