--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,6 +44,98 @@
   organization={IEEE}
 }
 
+@inproceedings{li2015overview,
+  title={An overview on memristor crossabr based neuromorphic circuit and architecture},
+  author={Li, Zheng and Liu, Chenchen and Wang, Yandan and Yan, Bonan and Yang, Chaofei and Yang, Jianlei and Li, Hai},
+  booktitle={2015 IFIP/IEEE International Conference on Very Large Scale Integration (VLSI-SoC)},
+  pages={52--56},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{liu2016security,
+  title={Security of neuromorphic systems: Challenges and solutions},
+  author={Liu, Beiye and Yang, Chaofei and Li, Hai and Chen, Yiran and Wu, Qing and Barnell, Mark},
+  booktitle={2016 IEEE International Symposium on Circuits and Systems (ISCAS)},
+  pages={1326--1329},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{yang2019thwarting,
+  title={Thwarting replication attack against memristor-based neuromorphic computing system},
+  author={Yang, Chaofei and Liu, Beiye and Li, Hai and Chen, Yiran and Barnell, Mark and Wu, Qing and Wen, Wujie and Rajendran, Jeyavijayan},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={39},
+  number={10},
+  pages={2192--2205},
+  year={2019},
+  publisher={IEEE}
+}
+
+@inproceedings{yang2016applications,
+  title={The applications of NVM technology in hardware security},
+  author={Yang, Chaofei and Liu, Beiye and Wang, Yandan and Chen, Yiran and Li, Hai and Zhang, Xian and Sun, Guangyu},
+  booktitle={Proceedings of the 26th edition on Great Lakes Symposium on VLSI},
+  pages={311--316},
+  year={2016}
+}
+
+@inproceedings{li2015spiking,
+  title={Spiking-based matrix computation by leveraging memristor crossbar array},
+  author={Li, Hai Helen and Liu, Chenchen and Yan, Bonan and Yang, Chaofei and Song, Linghao and Li, Zheng and Chen, Yiran and Zhu, Weijie and Wu, Qing and Jiang, Hao},
+  booktitle={2015 IEEE Symposium on Computational Intelligence for Security and Defense Applications (CISDA)},
+  pages={1--4},
+  year={2015},
+  organization={IEEE}
+}
+
+@incollection{hassan2019designing,
+  title={Designing neuromorphic computing systems with memristor devices},
+  author={Hassan, Amr Mahmoud and Liu, Chenchen and Yang, Chaofei and Chen, Yiran and others},
+  booktitle={Handbook of Memristor Networks},
+  pages={469--494},
+  year={2019},
+  publisher={Springer}
+}
+
+@inproceedings{yang2020enhancing,
+  title={Enhancing generalization of wafer defect detection by data discrepancy-aware preprocessing and contrast-varied augmentation},
+  author={Yang, Chaofei and Li, Hai and Chen, Yiran and Hu, Jiang},
+  booktitle={2020 25th Asia and South Pacific Design Automation Conference (ASP-DAC)},
+  pages={145--150},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{yang2019neuromorphic,
+  title={Neuromorphic computing systems: From cmos to emerging nonvolatile memory},
+  author={Yang, Chaofei and Qiao, Ximing and Chen, Yiran},
+  journal={IPSJ Transactions on System LSI Design Methodology},
+  volume={12},
+  pages={53--64},
+  year={2019},
+  publisher={Information Processing Society of Japan}
+}
+
+@incollection{yang2017nanoscale,
+  title={Nanoscale Memory Architectures for Neuromorphic Computing},
+  author={Yang, Chaofei and Li, Hai and Chen, Yiran},
+  booktitle={Security Opportunities in Nano Devices and Emerging Technologies},
+  pages={215--234},
+  year={2017},
+  publisher={CRC Press}
+}
+
+@inproceedings{yang2016security,
+  title={Security challenges in smart surveillance systems and the solutions based on emerging nano-devices},
+  author={Yang, Chaofei and Wu, Chunpeng and Li, Hai and Chen, Yiran and Barnell, Mark and Wu, Qing},
+  booktitle={2016 IEEE/ACM International Conference on Computer-Aided Design (ICCAD)},
+  pages={1--6},
+  year={2016},
+  organization={IEEE}
+}
+
 @phdthesis{yang2020security,
   title={Security and Robustness in Neuromorphic Computing and Deep Learning},
   author={Yang, Chaofei},
